welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:21: error: value update is not a member of Boolean
		vuBiscuit()=true  
                ^