welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
var vuBiscuit = false;
def chemin() { 
	while (vuBiscuit==false) {
		avance()
		avance()
		avance()
		avance()
		avance()
		avance()
		recule ()
		recule()
		recule()
		recule()
		recule()
		recule()
	}
}
def haveBaggle():Boolean = {
	chemin()
	if (estSurBiscuit()==true) {
		vuBiscuit()=true  
		return true;
	}
	else {
		return false;
	}
	
}
